--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,6 @@
-button {
+/* Buttons need more room than that, we'll figure it out later */
+/*button {
           height: 30px;
           width: 100px;
           outline: none;
-        }
+        }*/
