--- a/popup.css
+++ b/popup.css
@@ -1,35 +1,6 @@
 /* Buttons need more room than that, we'll figure it out later */
-//Adds layout for Group - tabs. 
-//Not the finalized version.
-
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
-.button2 {background-color: #f44336;} /* Red */
-.button3 {background-color: #f44336;} /* Red */
-.button4 {background-color: #f44336;} /* Red */
-.button5 {background-color: #f44336;} /* Red */
-
-.button2 {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
-.button6 {background-color: #f44336;} /* Red */
-.button7 {background-color: #f44336;} /* Red */
-.button8 {background-color: #f44336;} /* Red */
-.button9 {background-color: #f44336;} /* Red */
+/*button {
+          height: 30px;
+          width: 100px;
+          outline: none;
+        }*/
