--- a/popup.css
+++ b/popup.css
@@ -1,21 +1,42 @@
 /* Buttons need more room than that, we'll figure it out later */
 /*Adds layout for Group - tabs. 
 //Not the finalized version."*/
-
+html{
+  height: 400px;
+  width: 400px;
+}
 .box{
-  background: #fff;
+  /*background: #888;*/
+  position: fixed;
+  background-image: linear-gradient(-60deg, rgb(255, 115, 0) 50%, rgb(255, 255, 255) 50%);
+  bottom:0;
+  left:-90%;
+  /*opacity:.5;*/
+  
+  right:-90%;
+  top:0;
+  z-index:-1;
+
+
+  animation:back 1.5s ease-in-out forwards; 
+}
+/*.box2{
+  background: rgb(255,72,0);
+  position: absolute;
   width: 300px;
-  height: 500px;
+  height: 50px;
   
   animation-name: back;
-  animation-duration: 1s; 
-}
+  animation-duration: 1s;
+}*/
 
 @keyframes back{
-  0% {background-color: rgb(255, 72, 0);}
-  /*50% {background-color: #999;}*/
-  100% {background-color: #fff;}
-  
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(30%);
+  }
 }
 
 .button {
