--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,36 @@
 /* Buttons need more room than that, we'll figure it out later */
-html {
-  width: 300px;
+/*Adds layout for Group - tabs. 
+//Not the finalized version."*/
+html{
+  height: 400px;
+  width: 400px;
 }
+.box{
+  /*background: #888;*/
+  position: fixed;
+  background-image: linear-gradient(60deg, rgb(255, 115, 0) 50%, rgb(255, 255, 255) 50%);
+  bottom:0;
+  left:-90%;
+  /*opacity:.5;*/
+  
+  right:-90%;
+  top:0;
+  z-index:-1;
+
+
+  animation:back 1.5s ease-in-out forwards; 
+}
+
+
+@keyframes back{
+  0% {
+    transform:translateX(25%);
+  }
+  100% {
+    transform:translateX(-30%);
+  }
+}
+
 button {
   background-color: #4CAF50; /* Green */
   border: none;
