--- a/popup.css
+++ b/popup.css
@@ -2,13 +2,12 @@
 /*Adds layout for Group - tabs. 
 //Not the finalized version."*/
 html{
-  height: 400px;
-  width: 400px;
+  width: 300px;
 }
 .box{
   /*background: #888;*/
   position: fixed;
-  background-image: linear-gradient(60deg, rgb(255, 115, 0) 50%, rgb(255, 255, 255) 50%);
+  background-image: linear-gradient(60deg, rgb(240, 72, 51) 50%, rgb(255, 115, 0) 50%);
   bottom:0;
   left:-90%;
   /*opacity:.5;*/
@@ -32,9 +31,9 @@ html{
 }
 
 button {
-  background-color: #4CAF50; /* Green */
+  background-color: white/*#4CAF50; /* Green */
   border: none;
-  color: white;
+  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
