--- a/popup.css
+++ b/popup.css
@@ -1,27 +1,37 @@
 /* Buttons need more room than that, we'll figure it out later */
 /*Adds layout for Group - tabs. 
 //Not the finalized version."*/
-html{
+html {
   width: 300px;
+  height: 400px;
 }
-.box{
+
+.box {
   /*background: #888;*/
   position: fixed;
-  background-image: linear-gradient(60deg, rgb(240, 72, 51) 50%, rgb(255, 115, 0) 50%);
+  background-image: linear-gradient(70deg, rgb(240, 72, 51) 50%, rgb(153, 93, 0) 50%); /*(70deg, rgb(240, 72, 51) 50%, rgb(255, 115, 0) 50%)*/
   bottom:0;
   left:-90%;
   /*opacity:.5;*/
   
   right:-90%;
   top:0;
-  z-index:-1;
+  z-index:-2;
 
 
   animation:back 1.5s ease-in-out forwards; 
 }
 
-
-@keyframes back{
+.innerShadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  box-shadow: inset 0px 0px 4px black;
+}
+@keyframes back {
   0% {
     transform:translateX(25%);
   }
@@ -33,19 +43,22 @@ body {
   white-space: nowrap;
 }
 button {
-  background-color: white/*#4CAF50; /* Green */
+  background-color: rgb(255, 115, 0);/*#4CAF50; /* Green */
   border: none;
-  color: black;
+  outline: none;
+  color: white;
   padding: 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  margin-bottom: 5px;
   font-size: 16px;
 }
 
 input {
   display: inline-block;
   padding: 5px 5px;
+  margin-bottom: 5px;
 }
 
 #headerBox {
@@ -56,13 +69,23 @@ input {
   box-shadow: 0px 2px 10px black;
 }
 
-#editGroups {
-  padding: 10px;
-  height: 48px;
+#openGroupButtons-empty {
+  text-shadow: 2px 2px 5px black;
+  color: rgb(255, 115, 0);
   position: absolute;
-  display: block;
-  top: 0;
-  right: 0;
+  top: 40%;
+  text-align: center;
+}
+
+#editGroups {
+  font-weight: bold;
+  background-color: red;
+  text-shadow: 1px 1px 2px black;
+  padding: none;
+  position: absolute;
+  display: table-cell;
+  top: 10px;
+  right: 5px;
 }
 
 #addGroupButton {
