--- a/popup.css
+++ b/popup.css
@@ -1,9 +1,10 @@
 /* Buttons need more room than that, we'll figure it out later */
 /*Adds layout for Group - tabs. 
-//Not the finalized version."*/
+Not the finalized version."*/
 html {
   width: 300px;
   height: 400px;
+  user-select: none; /*The user cannot highlight the text and see our hacky-ness*/
 }
 
 .box {
@@ -16,21 +17,69 @@ html {
   
   right:-90%;
   top:0;
-  z-index:-2;
+  z-index:-3;
 
 
   animation:back 1.5s ease-in-out forwards; 
 }
 
+/* width */
+::-webkit-scrollbar {
+  /*width: 10px;*/
+  display: none;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  display: none; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+::-webkit-scrollbar-corner {
+  display: none;
+}
 .innerShadow {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: -2;
   box-shadow: inset 0px 0px 4px black;
 }
+
+/**************************************************Animations************************************************************/
+@keyframes slideLeft{
+  0% {
+    transform: translateX(100%);
+    opacity: 0%;
+  }
+  100%{
+    transform: translateX(0%);
+    opacity: 100%}
+}
+
+@keyframes slideRight{
+  0% {
+    transform: translateX(-100%);
+    opacity: 0%;
+  }
+  100%{
+    transform: translateX(0%);
+    opacity: 100%;
+  }
+}
+
 @keyframes back {
   0% {
     transform:translateX(25%);
@@ -39,27 +88,42 @@ html {
     transform:translateX(-30%);
   }
 }
+/************************************************************************************************************************/
 body {
   white-space: nowrap;
 }
+
+p {
+  position: relative;
+  transform: translateX(110%);
+  animation: slideLeft .3s ease-in-out forwards;
+  animation-delay: .1s;
+}
+
 button {
-  background-color: red;/*#4CAF50; /* Green */
+  background-color: red;/*rgb(255, 115, 0);/*#4CAF50; /* Green */
   border: none;
   outline: none;
   color: white;
-  padding: 15px;
-  width: 80%;
-  height: 70px;
+  padding: none;
+  width: 75%;
+  height: 50px;
+  font-weight: bold;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   margin-bottom: 5px;
   font-size: 16px;
+  box-shadow: 0px 2px 10px -5px black;
+
+  opacity: 0;
+  position: relative;
+  transform: translateX(110%);
+  animation: slideLeft .3s ease-in-out forwards;
+  animation-delay: .1s;
 }
 
-.editUrlsButton{
-  background-color: red;
-  width:55px;
+.dropDown {
+  position: relative;
 }
 
 .addUrlButton{
@@ -76,22 +140,75 @@ button {
   height:30px;
 }
 
+.editUrlsButton {
+  background-color: red;
+  width: 15%;
+  color: red;
+  text-align: right;
+  overflow: hidden;
+  display: table-cell;
+  background-image: url(images/DotDotDot.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  /* put the height and width of your image here */
+  background-size: 35px;
+
+  position: relative;
+  transform: translateX(110%);
+  animation: slideLeft .3s ease-in-out forwards;
+  animation-delay: .1s;
+}
+
+.openGroupButton {
+  width: 70%;
+  display: table-cell;
+  position: relative;
+}
+#openGroupButtons{
+  height: 400px;
+  overflow: scroll;
+
+  position: relative;
+}
+
+#openGroupButtons:after {
+  content: "";
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: linear-gradient(to bottom, rgba(240, 72, 51, 0), rgba(240, 72, 51, 1) 90%);
+  width: 100%;
+  height: 100px;/*4em;*/
+}
+
+button.editGroups {
+  padding: 5px 5px;
+  width:40px;
+}
+
 input {
   display: inline-block;
   padding: 5px 5px;
   margin-bottom: 5px;
-}
+  width: 60%;
 
-/*button span {
-  display: none;
-}*/
+  opacity: 0;
+  position: relative;
+  transform: translateX(-110%);
+  animation: slideRight .3s ease-in-out forwards;
+  animation-delay: .1s;
+}
 
 #headerBox {
   background-color: red;
-  margin: -10px;
-  margin-bottom: 10px;
+  margin: -10px -10px 0px -10px;
+  margin-bottom: 15px;
   height: 48px;
   box-shadow: 0px 2px 10px black;
+
+  z-index: -1;
 }
 
 #openGroupButtons-empty {
@@ -109,12 +226,12 @@ input {
   padding: none;
   position: absolute;
   display: table-cell;
-  height: 40px;
-  width: 40px;
-  top: 5px;
-  right: 5px;
+  height: 45px;
+  width: 48px;
+  top: 0px;
+  right: 0px;
 
-  background-image: url(images/Check-Mark.png);
+  background-image: url(images/PlusMinus.png);/*(images/Check-Mark.png);*/
   background-repeat: no-repeat;
   background-position: 50% 50%;
   /* put the height and width of your image here */
@@ -122,24 +239,7 @@ input {
 }
 
 #addGroupButton {
-  padding: none;
+  width: 40px;
+  height: 30px;
+  padding: none;/*5px 5px;*/
 } /* Red */
-.button3 {background-color: #f44336;} /* Red */
-.button4 {background-color: #f44336;} /* Red */
-.button5 {background-color: #f44336;} /* Red */
-
-.button2 {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
-.button6 {background-color: #f44336;} /* Red */
-.button7 {background-color: #f44336;} /* Red */
-.button8 {background-color: #f44336;} /* Red */
-.button9 {background-color: #f44336;} /* Red */
